# doppiozero

./: .flake8  .pre-commit-config.yaml  README.md  agent_test.ipynb  agent_test_output.json  clarifying_answers.txt  executive_summary_prompt.txt  llm_test.ipynb  pyproject.toml  run_agent_test.py  supervisor_agent.ipynb
.github/: copilot-instructions.md
doppiozero/: __init__.py  archive_meeting.py  content_fetcher.py  content_service.py  contents.py  create_weekly_note.py  extract_topics.py  fetch_github_conversation.py  fetch_github_conversations.py  github_client.py  github_conversations_research_agent.py  index_summaries.py  index_summary.py  llm_client.py  log.py  meetings.py  prepare_commit.py  prepare_pull_request.py  search_github_conversations.py  select_folder.py  semantic_search_github_conversations.py  summarize_github_conversation.py  vector_upsert.py
doppiozero/agent/: github_deep_research_agent.py  log.py  utils.py
doppiozero/agents/: gh_deep_search.py  supervisor.py
doppiozero/clients/: github.py  llm.py
doppiozero/nodes/: __init__.py  ask_clarifying_node.py  claim_verifier.py  claim_verifier_node.py  clarifier.py  context_compacter.py  end.py  (+14 more)
prompts/: CONTRIBUTING.md  LICENSE  README.md  commit-message-guidelines.txt
scripts/: archive-meeting  create-weekly-note  extract-topics  fetch-github-conversation  fetch-github-conversations  github-conversations-research-agent  index-summaries  index-summary  prepare-commit  prepare-pull-request  select-folder  semantic-search-github-conversations  summarize-github-conversation  vector-upsert
(+26 files in other folders)
