[tool.poetry]
name = "doppiozero"
version = "0.1.0"
description = "Python library for agentic development."
authors = ["Romano Foti <foti.romano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
